# automatised-pipeline

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect.md  code-reviewer.md  data-scientist.md  dba.md  devops-engineer.md  engineer.md  experiment-runner.md  frontend-engineer.md  latex-engineer.md  mlops.md  orchestrator.md  paper-writer.md  professor.md  research-scientist.md  reviewer-academic.md  security-auditor.md  test-engineer.md  ux-designer.md
.claude/commands/: _index.md
.claude/hooks/: README.md  hooks.json  notification-handler.sh  post-commit-difficulty.sh  post-commit-lab-notebook.sh  post-edit-balance.sh  post-research-provenance.sh  post-tool-error-routing.sh  pre-commit-zetetic.sh  pre-edit-layer-check.sh  pre-push-provenance.sh  pre-push-review.sh  pre-tool-claim-gate.sh  session-end.sh  session-start-research.sh  session-start.sh
.claude/scripts/: spawn-agent.sh  test-spawn-agent.sh
.claude/skills/: _index.md  _template.md
.claude/tools/: agent-catalog.sh  balance-auditor.sh  difficulty-book-manager.sh  docker-runner.sh  genius-invoker.sh  hook-runner.sh  lab-notebook-manager.sh  live-preview.sh  mlx-compute.sh  profile-runner.sh  provenance-manager.sh  research-session-manager.sh  session-store.sh  shape-router.sh  skill-runner.sh  worktree-manager.sh  zetetic-checker.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
benches/: README.md
benches/harness/: Cargo.toml
benches/harness/src/: corpora.rs  main.rs  queries.rs  report.rs  runner.rs  scoring.rs
src/: clustering.rs  git_diff.rs  graph_store.rs  indexer.rs  lib.rs  lsp_client.rs  lsp_resolver.rs  macro_expansion.rs  main.rs  prd_input.rs  prd_validator.rs  resolver.rs  resolver_layers.rs  rust_parser.rs  security_gates.rs  semantic_diff.rs  stdlib_index.rs  tool_schemas.rs
src/parser/: c.rs  (+10 more)
stages/: d-review.md  stage-1.md  stage-1.review.md  stage-2.md  stage-3-db-evaluation.md  stage-3-research.md  stage-3.md  stage-3b-v2.md  stage-3b.md  stage-3c.md  stage-6.md  stage-8.md
tests/: lbug_bulk_investigation.rs  multilang_integration.rs  scalability_bench.rs  stage3a_integration.rs  stage3b_integration.rs  stage3b_v2_layers.rs  stage3c_integration.rs  stage3d_hybrid_search.rs  stage3d_integration.rs  stage4_integration.rs  stage6_integration.rs  stage8_integration.rs  stage9_integration.rs  tfidf_size_report.rs
(+240 files in other folders)
