[package]
name = "bench-end-result"
version = "0.0.1"
edition = "2021"
description = "End-result evaluation harness for ai-architect-mcp. Scores the pipeline's agent-facing tool answers against ground truth (stage-3b-v2 §2)."

[[bin]]
name = "bench_end_result"
path = "src/main.rs"

[dependencies]
# source: ground_truth.json and corpus.toml parsing.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# source: corpus.toml parsing. Minimal single-file TOML reader.
toml = "0.8"
# source: temp graph dir per bench run; lets us re-index into /tmp/<corpus>/graph
# without polluting the repo. Aligns with tests/scalability_bench.rs pattern.
tempfile = "3"
# source: CLI flag parsing — --corpus NAME, --all, --binary PATH, --rebuild.
clap = { version = "4", features = ["derive"] }
